--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^16.18.116",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.13"
   }
 }
