--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13"
+    "@types/lodash": "^4.17.13",
+    "serve": "^14.2.4"
   }
 }
