--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "firebase-tools": "^13.24.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
